# spade-executor-airflow

./: .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build-spadekit.yml
spade_executor_airflow/: executor.py  history_provider.py  utils.py
spadeapp/executors/airflow/: executor.py  history_provider.py
